# quick-mafs

./: .gitignore  Cargo.toml  README.md  equations.txt
src/: main.rs
