[package]
name = "quick-mafs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord = { git = "https://github.com/SpaceManiac/discord-rs" }
urlencoding = "2.1.0"
downloader = "0.2.6"
rand = "0.8.4"